# android_file_handler_adb

./: .dockerignore  .gitignore  APPIMAGE_TROUBLESHOOTING.md  CLAUDE.md  LICENSE.txt  README.md  WIKI.md  android-file-handler-windows.spec  android_folder_puller.py  codeql-config.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_parsing.py
.github/: RELEASE.md  WORKFLOW_SUMMARY.md  copilot-instructions.md
.github/workflows/: branch-protection-config.yml  ci_cd.yml  claude-code-review.yml  claude.yml  release-scrapyard.yml  release.yml  simple-release.yml  status-checks.yml  sync-wiki.yml  test-env-detection.yml
debug_tools/: README.md  debug_adb.py  debug_main.py  debug_parsing.py  test_large_transfer_progress.py  test_minimal_progress.py  test_modular_progress.py  test_modular_successive.py  test_normal_flow.py  test_parsing.py  test_progress.py  test_real_workflow.py  test_successive_transfers.py
docs/: SECURITY.md
keys_and_checksums/: public-gpg-key.asc
scripts/: build_AppImage.sh  build_exe.sh  build_package_linux.py  build_package_linux.sh  linux_postinst.sh  rhel_postinst.sh
scripts/docker/: Dockerfile.arch  Dockerfile.debian  Dockerfile.rhel  README.md
scripts/spec_scripts/: android-file-handler-arch.spec  android-file-handler-debian.spec  android-file-handler-linux.spec  android-file-handler-rhel.spec  android-file-handler-windows.spec
scripts/windows/: first_run_install.ps1
src/: __init__.py  adb_manager.py  android_file_handler.py  android_folder_puller.py  file_deduplication.py  gui.py  main.py
src/core/: __init__.py  adb_command.py  adb_manager.py  file_transfer.py  platform_tools.py  platform_utils.py  progress_tracker.py
src/gui/: __init__.py  device_manager.py  dialog_manager.py  file_browser.py  license_agreement.py  linux_browser.py  main_window.py  progress_handler.py  transfer_manager.py  ui_components.py  windows_browser.py
src/gui/components/: __init__.py  file_browser.py  ui_components.py
src/gui/dialogs/: __init__.py  license_agreement.py
src/gui/handlers/: __init__.py  animation_handler.py
src/managers/: __init__.py  device_manager.py  transfer_manager.py
src/utils/: __init__.py  security_utils.py
tests/: conftest.py  test_basic.py
tests/core/: test_adb_command.py  test_adb_manager.py  test_file_transfer.py  test_platform_tools.py  test_platform_utils.py  test_progress_tracker.py
tests/managers/: test_device_manager.py
tests/utils/: test_file_deduplication.py  test_security_utils.py
