[project]
name = "android-file-handler-adb"
version = "0.1.0"
description = "An Android file transfer util for Windows and Linux. MacOS support may be added later."
authors = [
    { name = "Jason Ross", email = "51939451+JMR-dev@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.32.4,<3.0.0"]

[tool.poetry.dependencies]
python = ">=3.8"
requests = ">=2.32.4,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
where = ["src"] # or wherever your source code lives

[tool.setuptools.package-dir]
"" = "src" # if using src layout
