[project]
name = "android_file_handler"
version = "0.1.0"
description = "An Android file transfer util for Windows and Linux. MacOS support may be added later."
authors = [
    { name = "Jason Ross", email = "51939451+JMR-dev@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "<=3.13,>3.12"
dependencies = ["requests>=2.32.4,<3.0.0", "platformdirs>4.0.0,<5.0.0"]

[tool.poetry.dependencies]
python = "<=3.13,>3.12"
requests = ">=2.32.5,<3.0.0"
platformdirs = ">=4.5.0,<5.0.0"
urllib3 = ">=2.0.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Main application entry point
android-file-handler = "src.main:main"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.1.0"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
where = ["src"] # or wherever your source code lives

[tool.setuptools.package-dir]
"" = "src" # if using src layout
